--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ spaceship corridors. All presented in stunning AAA graphics.</span></td>
     <tr>
       <td style="text-align: center;"><span
  style="font-family: Verdana; font-size: 13.3333px; font-style: normal; font-weight: normal; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; background-color: rgb(0, 0, 0); display: inline ! important; float: none; color: white;">Cargo
-Breach is the debut title title of No 28 Games. And harnases the power
+Breach is the debut title title of No 28 Games. And harnasses the power
 of these great brands. </span><br><br>
       <img style="width: 715px; height: 52px;" alt="brands"
  src="images/brands.png"></td>
