--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@ of these great brands. </span><br><br>
 <big><big><span style="color: white;">FOLOW US
 ON</span></big></big></small></small></small><br>
 <br>
-<a href="https://www.facebook.com/N028Games/"><img
+<a href="https://www.facebook.com/N028Games/"target="_blank"><img
  style="border: 0px solid ; width: 32px; height: 32px;"
  alt="Facebook" title="Facebook" src="images/fb.png"></a>
 &nbsp; <a
- href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw"><img
+ href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw" target="_blank"><img
  style="border: 0px solid ; width: 32px; height: 32px;"
  alt="YouTube" title="YouTube" src="images/YT.png"></a>
 &nbsp;&nbsp;<a href="mailto:info@no28.games"><img
