--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="content-overlay">
     <h1></h1>
     </div>
-      <video preload="metadata" autoplay loop id="my-video">
+      <video preload="metadata" autoplay loop muted id="my-video">
         <source src="videos/backgroundvid.mp4" type="video/mp4">
         <source src="videos/backgroundvid.ogg" type="video/ogg">
       </video>
