--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <meta name="msapplication-square310x310logo" content="icon/mstile-310x310.png"></head>
 </head>
 <body>
-
+<body style="background-color:black;">
 <div id="navbar">
 		<a href="http://store.steampowered.com/app/722040/Cargo_Breach/" target="_blank">BUY NOW</a>
 </div>
@@ -171,7 +171,7 @@ ON</span></big></big></small></small></small><br>
  style="border: 0px solid ; width: 32px; height: 32px;"
  alt="YouTube" title="YouTube" src="images/YT.png"></a>
  
- &nbsp;&nbsp;<a href="http://store.steampowered.com/app/722040/Cargo_Breach/"><img
+ &nbsp;&nbsp;<a href="http://store.steampowered.com/app/722040/Cargo_Breach/" target="_blank"><img
  style="border: 0px solid ; width: 32px; height: 32px;"
  alt="BUY" title="BUY" src="images/STEAM.png"></a>
  
