--- a/index.html
+++ b/index.html
@@ -160,8 +160,7 @@ of these great brands. </span><br><br>
 </div>
 <br>
 <div style="text-align: center;"><small><small><small><br>
-<big><big><span style="color: white;">FOLOW US
-ON</span></big></big></small></small></small><br>
+<big><big><span style="color: white;">FIND US ON</span></big></big></small></small></small><br>
 <br>
 <a href="https://www.facebook.com/N028Games/"target="_blank"><img
  style="border: 0px solid ; width: 32px; height: 32px;"
